Fix: fixed horizontal scroll bug on all pages by removing the custom css setting the container-fluid padding to 0 & updated known bugs list in README.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,10 +42,6 @@ body {
     height: 60vh;
 }
 
-.container-fluid{
-    padding: 0;
-}
-
 #newsletter-header{
     margin-bottom: 0;
 }
